@@ -92,6 +92,9 @@ CTRL+SHIFT+.    Copy the current working directory from the active file-list
                 to the inactive one
 
 CTRL+R          Refresh the active file list
+CTRL+O          Options dialog
+CTRL+SHIFT+H    Toggle hidden files on/off
+
 CTRL+G          FTP Quick Connect
 CTRL+F          Connect to FTP server
 CTRL+SHIFT+F    Disconnect from FTP server
