@@ -171,6 +171,9 @@ gnome_cmd_data_get_filter_settings      (void);
 gboolean
 gnome_cmd_data_get_type_filter          (GnomeVFSFileType type);
 
+void
+gnome_cmd_data_set_hidden_filter        (gboolean hide);
+
 gboolean
 gnome_cmd_data_get_hidden_filter        (void);
 
