@@ -19,6 +19,8 @@ New features:
  * New icon for internal viewer
  * Updated help docs
  * New or updated translations: ca, cs, de, el, en_GB, es, eu, hu, it, ne, ru, sv, vi
+ * New key bindings:
+      CTRL+SHIFT+H   Toggle hidden files on/off
 
 
 ===================================
